// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VehicleSelector renders with isActive set to false 1`] = `
<div
  className="vehicle-selector"
  onClick={[MockFunction]}
  role="presentation"
>
  <div
    className="vehicle-selector__image"
  >
    <img
      alt="vehicle-selector"
      src="Vehicle image url"
    />
  </div>
  <div
    className="vehicle-selector__name"
  >
    Vehicle name
  </div>
  <span
    className="vehicle-selector__selected-indicator"
  >
     
  </span>
</div>
`;

exports[`VehicleSelector renders with isActive set to true 1`] = `
<div
  className="vehicle-selector vehicle-selector--active"
  onClick={[MockFunction]}
  role="presentation"
>
  <div
    className="vehicle-selector__image"
  >
    <img
      alt="vehicle-selector"
      src="Vehicle image url"
    />
  </div>
  <div
    className="vehicle-selector__name"
  >
    Vehicle name
  </div>
  <span
    className="vehicle-selector__selected-indicator vehicle-selector__selected-indicator--active"
  >
     
  </span>
</div>
`;
